# src/router.ts
@@ -1,6 +1,6 @@
 import Router from 'koa-router';
 import { healthCheck } from './health.controller';
-import { monitorQuote, monitorTransfer, replyQuote } from './app.controller';
+import { monitorQuote, monitorTransfer, replyQuote, transferResponse } from './app.controller';
 
 const router = new Router();
 
@@ -12,4 +12,8 @@ router.get('/health', healthCheck);
 router.post('/execute', monitorQuote);
 router.post('/quoteReply', replyQuote);
 // router.post('/transfer', monitorTransfer);
+
+// transfer response
+router.post('/transfer-response', transferResponse);
+
 export default router;
